<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">PegaTrampo</string>

    <!--Facebook-->
    <string name="facebook_app_id">1375634119406001</string>


    <string name="title_section1">Home</string>
    <string name="title_section2">Mapa de trabalho</string>
    <string name="title_section3">Lista de Trabalhos</string>
    <string name="title_section4">Meus trabalhos</string>
    <string name="title_section5">FAQ</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Sair</string>
    <string name="action_settings">Ferramentas</string>
    <string name="acao_buscar">Buscar</string>
    <string name="Fragment_12">Fragment_12</string>
    <string name="Fragment_13">Fragment_13</string>

    <!-- Tela de anunciar vaga -->
    <string name="textTituloVaga">Título da vaga</string>
    <string name="vFuncao">Função:</string>
    <string name="vSalario">Salario:</string>
    <string name="v_Cidade">Cidade:</string>
    <string name="v_DescricaoVaga">Descrição da Vaga:</string>
    <string name="v_BtnCadastrarVaga">Cadastrar vaga</string>
    <string name="cidade_prompt">Selecione cidade:</string>

    <string-array name="cidade_arrays">
        <item>Brasília</item>
        <item>Gama</item>
        <item>Sobradinho</item>
        <item>Santa Maria</item>
        <item>Recanto das Emas</item>
        <item>Taguatinga</item>
        <item>Outros</item>
    </string-array>

    <string name="cargo_prompt">Selecione cargo:</string>

    <string-array name="cargo_arrays">
        <item>Administrador de Banco de Dados (DBA)</item>
        <item>Arquiteto de Sistemas</item>
        <item>Arquiteto Java</item>
        <item>Analista Programador Oracle</item>
        <item>Engenheiro de Software</item>
        <item>Analista de Sistemas</item>
        <item>Analista de Requisitos</item>
        <item>Outros</item>
    </string-array>

    <string name="busque_vagas_de_emprego">Busque vagas de emprego</string>
    <string name="Texto_apresentacao_home">Procure e encontre aqui no pegatrampos as melhores oportunidades de trabalho do mercado ...</string>
    <string name="title_activity_google_play_services">GooglePlayServicesActivity</string>
    <string name="title_activity_maps">Map</string>
    <string name="str_aim">Analista de Sistemas</string>
    <string name="str_bebo">Analista de Redes</string>
    <string name="str_youtube">Analista de Requisitos</string>
    <string name="str_bebo_description">Procure e encontre aqui no pegatrampos as melhores oportunidades de trabalho do mercado ...</string>
    <string name="str_aim_description">Procure e encontre aqui no pegatrampos as melhores oportunidades de trabalho do mercado ...</string>
    <string name="str_txt_search">Procure e encontre aqui no pegatrampos as melhores oportunidades de trabalho do mercado ...</string>
    <string name="str_youtube_description">Procure e encontre aqui no pegatrampos as melhores oportunidades de trabalho do mercado ...</string>
    <string name="icon_content_description">icon_content_description</string>
    <string name="str_desc_vaga">Responder direto pelo ambiente de infraestrutura. Resolver questões complexas referentes aos recursos de infraestrutura. Atuar com ambiente Windows e Redes, em Data Center de alta disponibilidade. Contribuir para o desenvolvimento e orientação de profissionais menos experientes da equipe de infraestrutura na realização de suas atividades.
        Experiência de administração em Ambientes Windows, AD, DHCP, DNS, WSUS, Exchange, Lync Server.
        Ensino Superior completo em áreas de TI.
        Desejável conhecimento em System Center Configuration Manager (SCCM). Necessário conhecimentos em Redes TCP/IP, VLAN / Roteadores e Switches, Access Point. Desejável conhecimento em Proxy. Certificação CCNA e MCSA ou MCSE.

        Fonte: Analista de Redes - Vagas de emprego | Catho </string>





</resources>
