<?xml version="1.0" encoding="utf-8"?>
<!--
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
</LinearLayout>
-->

    <!-- http://www.androidhive.info/2011/10/android-login-and-registration-screen-design/ -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
android:layout_width="fill_parent"
android:layout_height="fill_parent"
android:fillViewport="true" >

<RelativeLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="#ffffff" >

    <!-- Header  Starts -->
    <LinearLayout
        android:id="@+id/header"
        android:layout_width="fill_parent"
        android:layout_height="35dip"
        android:background="@layout/header_gradient"
        android:paddingBottom="5dip"
        android:paddingTop="5dip" >

        <!-- Logo Start -->
        <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|center_horizontal|center"
            android:text="Cadastre vagas de emprego"
            android:textColor="#FFFFFF"
            android:textSize="20sp"
            android:typeface="sans" />


        <!-- Logo Ends -->

    </LinearLayout>
    <!-- Header Ends -->


    <!-- Footer Start -->
    <LinearLayout
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="35dip"
        android:layout_alignParentBottom="true"
        android:background="@layout/footer_repeat"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical|center_horizontal|center" >
    </LinearLayout>
    <!-- Footer Ends -->


    <!-- Login Form -->
    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header"
        android:orientation="vertical"
        android:padding="10dip" >

        <TextView
            android:id="@+id/Txv_Funcao"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_marginTop="14dp"
            android:text="@string/vFuncao" />

        <EditText
            android:id="@+id/Edtx_Funcao"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Txv_Funcao"
            android:layout_alignStart="@+id/Txv_Funcao"
            android:layout_below="@+id/Txv_Funcao"
            android:layout_marginTop="15dp"
            android:ems="10"
            android:inputType="text" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/Txv_Cidade"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Txv_Funcao"
            android:layout_alignStart="@+id/Txv_Funcao"
            android:layout_below="@+id/Txv_Funcao"
            android:layout_marginTop="14dp"
            android:text="@string/v_Cidade" />

        <EditText
            android:id="@+id/Edtx_Cidade"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Txv_Cidade"
            android:layout_alignStart="@+id/Txv_Cidade"
            android:layout_below="@+id/Txv_Cidade"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:inputType="text" />

        <TextView
            android:id="@+id/Txv_Salario"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Edtx_Cidade"
            android:layout_alignStart="@+id/Edtx_Cidade"
            android:layout_below="@+id/Edtx_Cidade"
            android:layout_marginTop="18dp"
            android:text="@string/vSalario" />

        <EditText
            android:id="@+id/Edtx_Salario"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Txv_Salario"
            android:layout_alignStart="@+id/Txv_Salario"
            android:layout_below="@+id/Txv_Salario"
            android:layout_marginTop="18dp"
            android:ems="10"
            android:inputType="numberDecimal" />



        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignLeft="@+id/Edtx_Salario"
            android:layout_alignStart="@+id/Edtx_Salario"
            android:layout_below="@+id/Edtx_Salario"
            android:layout_marginTop="14dp"
            android:text="@string/v_DescricaoVaga" />

        <EditText
            android:id="@+id/editText1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/textView1"
            android:layout_marginTop="14dp"
            android:ems="10"
            android:inputType="textMultiLine" />

        <Button
            android:id="@+id/button1"
            android:layout_width="wrap_content"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginBottom="26dp"
            android:layout_marginTop="10dp"
            android:text="@string/v_BtnCadastrarVaga" />

    </LinearLayout>
</RelativeLayout>

</ScrollView>